Ajout du paragraphe de description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Activité cours Git et GitHub</h1>
+    <p>Dans ce cours, nous apprenons à utiliser Git et GitHub pour partager et uploader son code sur un serveur distant</p>
     <script src="cours.js"></script>
 </body>
 
